# flappybot

./: .gitignore  CNN_DQN_README.md  DQN_README.md  cnn_dqn_player.py  dqn_player.py  flappybird_dqn.pth  flappybird_dqn_best.pth  flappybird_dqn_ep10.pth  flappybird_dqn_ep100.pth  flappybird_dqn_ep110.pth  flappybird_dqn_ep120.pth  flappybird_dqn_ep130.pth  flappybird_dqn_ep140.pth  flappybird_dqn_ep150.pth  flappybird_dqn_ep160.pth  flappybird_dqn_ep170.pth  flappybird_dqn_ep180.pth  flappybird_dqn_ep190.pth  flappybird_dqn_ep20.pth  flappybird_dqn_ep200.pth  flappybird_dqn_ep210.pth  flappybird_dqn_ep220.pth  flappybird_dqn_ep230.pth  flappybird_dqn_ep240.pth  flappybird_dqn_ep250.pth  flappybird_dqn_ep260.pth  flappybird_dqn_ep270.pth  flappybird_dqn_ep280.pth  flappybird_dqn_ep290.pth  flappybird_dqn_ep30.pth  flappybird_dqn_ep300.pth  flappybird_dqn_ep310.pth  flappybird_dqn_ep320.pth  flappybird_dqn_ep330.pth  flappybird_dqn_ep340.pth  flappybird_dqn_ep350.pth  flappybird_dqn_ep40.pth  flappybird_dqn_ep50.pth  flappybird_dqn_ep60.pth  flappybird_dqn_ep70.pth  (+9 more)
