[project]
name = "flappybird"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "appium-python-client>=5.2.4",
    "mss>=10.1.0",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "pyautogui>=0.9.54",
    "pytesseract>=0.3.13",
    "torch>=2.9.1",
]
